[gd_scene load_steps=3 format=3 uid="uid://cwmuvj8j5mlr"]

[ext_resource type="Script" uid="uid://dfl6tkns7cni2" path="res://blisscode/weather/weather_service.gd" id="1_bhuv2"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_audam"]

[node name="WeatherService" type="Node2D" node_paths=PackedStringArray("debug_panel", "moisture_slider", "altitude_slider", "temperature_slider", "barometer_slider", "wind_speed_slider")]
script = ExtResource("1_bhuv2")
dont_change_temperature = true
dont_change_moisture = true
moisture = 1.0
debug_panel = NodePath("CanvasLayer/Panel")
weather_pattern_noise = SubResource("FastNoiseLite_audam")
moisture_slider = NodePath("CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/MoistureHSlider")
altitude_slider = NodePath("CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/AltitudeHSlider")
temperature_slider = NodePath("CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3/TempHSlider")
barometer_slider = NodePath("CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4/BarometerHSlider")
wind_speed_slider = NodePath("CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer5/WindHSlider")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -229.0
offset_top = -249.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Moisture"

[node name="MoistureHSlider" type="HSlider" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(110, 27)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.25

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Altitude"

[node name="AltitudeHSlider" type="HSlider" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(110, 27)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.25

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Temp"

[node name="TempHSlider" type="HSlider" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(110, 27)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.25

[node name="HBoxContainer4" type="HBoxContainer" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Barometer"

[node name="BarometerHSlider" type="HSlider" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(110, 27)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.25

[node name="HBoxContainer5" type="HBoxContainer" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Wind"

[node name="WindHSlider" type="HSlider" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(110, 27)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.25

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Direction"

[node name="LeftWeatherButton" type="Button" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "<"

[node name="DownWeatherButton" type="Button" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "^"

[node name="RightWeatherButton" type="Button" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = ">"

[connection signal="value_changed" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/MoistureHSlider" to="." method="_on_moisture_h_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/AltitudeHSlider" to="." method="_on_altitude_h_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3/TempHSlider" to="." method="_on_temp_h_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4/BarometerHSlider" to="." method="_on_barometer_h_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer5/WindHSlider" to="." method="_on_wind_h_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer2/LeftWeatherButton" to="." method="_on_left_weather_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer2/DownWeatherButton" to="." method="_on_down_weather_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer2/RightWeatherButton" to="." method="_on_right_weather_button_pressed"]
